<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.talkfun.cloudlive.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/iv_scan"
            android:layout_width="@dimen/toolbar_icon_size"
            android:layout_height="@dimen/toolbar_icon_size"
            android:src="@mipmap/scan" />

        <TextView
            android:id="@+id/tv_toolbar_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/scan_login_tip"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>


    <include
        layout="@layout/login_verify_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></include>

    <LinearLayout
        android:id="@+id/ll_version_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_login_old_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_old_version"
            android:textColor="#666" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/secondaryTextColor"></View>

        <TextView
            android:id="@+id/tv_apply_for_try"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_for"
            android:textColor="#666" />
    </LinearLayout>

    <TextView
        android:id="@+id/version_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="11111111"
        android:textColor="@color/secondaryTextColor" />
</LinearLayout>
